Fixed event contact spacing part5

--- a/master_style.css
+++ b/master_style.css
@@ -698,6 +698,7 @@ a>.schedule:hover {
 	box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0);
 	padding-bottom:7vh;
 	background-color:rgba(255, 255, 255, 0.2);
+	height:auto;
 }
 
 #contact a {
@@ -1017,8 +1018,8 @@ a>.schedule:hover {
 		border-style:solid;
 		border-color:rgba(13, 32, 52, 0.5);
 		border-width:5px;
-		max-width:120px;
-		max-height:120px;
+		width:120px;
+		height:120px;
 	}
 
 	.modal .img-circle {
